--- a/src/adopsi.html
+++ b/src/adopsi.html
@@ -28,19 +28,19 @@
       <!-- Modal Container -->
       <div class="flex items-center justify-center fixed h-screen bottom-[-20%] w-full">
         <!-- Modal -->
-        <div class="bg-white bg-[url('/public/img/paw-pattern-light.png')] rounded-t-[32px] shadow-lg p-8 m-4 w-full h-full text-center">
+        <div class="bg-white bg-[url('public/img/paw-pattern-light.png')] rounded-t-[32px] shadow-lg p-8 m-4 w-full h-full text-center">
           <ul class="flex flex-col items-center gap-8 z-10 text-sky-900 font-semibold visible md:invisible">
             <li>
-              <a href="/src/tentang.html">Tentang Kami</a>
+              <a href="tentang.html">Tentang Kami</a>
             </li>
             <li>
-              <a href="/src/klinik.html">Klinik</a>
+              <a href="klinik.html">Klinik</a>
             </li>
             <li>
-              <a href="/src/grooming.html">Daycare & Grooming</a>
+              <a href="grooming.html">Daycare & Grooming</a>
             </li>
             <li>
-              <a href="/src/adopsi.html">Adopsi</a>
+              <a href="adopsi.html">Adopsi</a>
             </li>
             <li>
               <a href="https://api.whatsapp.com/send/?phone=0812345678910&text&type=phone_number&app_absent=0"><i class="bi bi-whatsapp px-2 text-green"></i>0812-3456-78910</a>
@@ -52,7 +52,7 @@
 
     <!-- /////////// -->
 
-    <nav class="flex flex-grow mx-auto scale-95 bg-[url('/public/img/paw-pattern-light.png')] bg-white flex-row justify-between my-5 pe-10 md:px-10 py-4 rounded-full overflow-hidden top-0 fixed w-full z-50 drop-shadow-[0_6px_18px_rgba(0,0,0,5%)]">
+    <nav class="flex flex-grow mx-auto scale-95 bg-[url('public/img/paw-pattern-light.png')] bg-white flex-row justify-between my-5 pe-10 md:px-10 py-4 rounded-full overflow-hidden top-0 fixed w-full z-50 drop-shadow-[0_6px_18px_rgba(0,0,0,5%)]">
       <a href="index.html" class="z-10 flex justify-center items-center">
         <svg width="155" class="scale-75 md:scale-100" height="58" viewBox="0 0 155 58" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path
@@ -98,17 +98,17 @@
       <ul class="flex flex-row items-center gap-8 z-10 text-sky-900 font-semibold">
         <ul class="flex flex-row items-center gap-8 z-10 text-sky-900 font-semibold max-md:hidden">
           <li>
-            <a href="/src/tentang.html">Tentang Kami</a>
+            <a href="tentang.html">Tentang Kami</a>
           </li>
           <li>
-            <a href="/src/klinik.html">Klinik</a>
+            <a href="klinik.html">Klinik</a>
           </li>
           <li>
-            <a href="/src/grooming.html">Daycare & Grooming</a>
+            <a href="grooming.html">Daycare & Grooming</a>
           </li>
           <li class="flex gap-2">
-            <img src="/public/img/pawYellow.svg" class="" alt="" />
-            <a href="/src/adopsi.html">Adopsi</a>
+            <img src="public/img/pawYellow.svg" class="" alt="" />
+            <a href="adopsi.html">Adopsi</a>
           </li>
         </ul>
 
@@ -131,7 +131,7 @@
           </div> -->
       </ul>
     </nav>
-    <section id="big-cat-pic" class="bg-[url('/public/img/hero-adoption.jpg')] bg-cover bg-center w-full h-[300px] md:h-[600px]"></section>
+    <section id="big-cat-pic" class="bg-[url('public/img/hero-adoption.jpg')] bg-cover bg-center w-full h-[300px] md:h-[600px]"></section>
     <main>
       <section class="up bg-light text-dark text-[64px] pt-20 pb-10">
         <div class="flex flex-col lg:flex-row gap-10 justify-center container px-10 lg:px-20 mx-auto">
@@ -140,7 +140,7 @@
               Cat <br />
               Adoption
             </h1>
-            <img src="/public/img/CatPaw(1).svg" class="size-52" alt="" />
+            <img src="public/img/CatPaw(1).svg" class="size-52" alt="" />
           </div>
           <div class="flex-1 flex items-end pb-5">
             <p class="text-lg lg:text-xl text-black">Berikut adalah beberapa kucing yang saat ini siap untuk diadopsi. Klik pada gambar untuk melihat informasi lebih detail tentang masing-masing kucing.</p>
@@ -149,7 +149,7 @@
         <div class="flex flex-col justify-center items-center pt-10 gap-8 scale-95">
           <div class="flex flex-col lg:flex-row justify-center items-center gap-8 py-10">
             <div class="flex flex-col w-full lg:w-3/12 h-[700px] p-3 rounded-[18px] bg-white text-dark">
-              <img src="/public/img/adopsi-bella.jpg" class="w-full h-[326px] object-cover object-center overflow-hidden rounded-[8px]" alt="" />
+              <img src="public/img/adopsi-bella.jpg" class="w-full h-[326px] object-cover object-center overflow-hidden rounded-[8px]" alt="" />
               <h3 class="font-bold text-[32px] py-4 text-pretty">Bella</h3>
               <div class="flex gap-10">
                 <ul class="text-xl flex flex-col gap-4">
@@ -172,7 +172,7 @@
               >
             </div>
             <div class="flex flex-col w-full lg:w-3/12 h-[700px] p-3 rounded-[18px] bg-white text-dark">
-              <img src="/public/img/adopsi-leo.jpg" class="w-full h-[326px] object-cover object-center overflow-hidden rounded-[8px]" alt="" />
+              <img src="public/img/adopsi-leo.jpg" class="w-full h-[326px] object-cover object-center overflow-hidden rounded-[8px]" alt="" />
               <h3 class="font-bold text-[32px] py-4 text-pretty">Leo</h3>
               <div class="flex gap-10">
                 <ul class="text-xl flex flex-col gap-4">
@@ -195,7 +195,7 @@
               >
             </div>
             <div class="flex flex-col w-full lg:w-3/12 h-[700px] p-3 rounded-[18px] bg-white text-dark">
-              <img src="/public/img/adopsi-mimi.jpg" class="w-full h-[326px] object-cover object-center overflow-hidden rounded-[8px]" alt="" />
+              <img src="public/img/adopsi-mimi.jpg" class="w-full h-[326px] object-cover object-center overflow-hidden rounded-[8px]" alt="" />
               <h3 class="font-bold text-[32px] py-4 text-pretty">Momo</h3>
               <div class="flex gap-10">
                 <ul class="text-xl flex flex-col gap-4">
@@ -218,7 +218,7 @@
               >
             </div>
             <div class="flex flex-col w-full lg:w-3/12 h-[700px] p-3 rounded-[18px] bg-white text-dark">
-              <img src="/public/img/adopsi-tom.jpg" class="w-full h-[326px] object-cover object-center overflow-hidden rounded-[8px]" alt="" />
+              <img src="public/img/adopsi-tom.jpg" class="w-full h-[326px] object-cover object-center overflow-hidden rounded-[8px]" alt="" />
               <h3 class="font-bold text-[32px] py-4 text-pretty">Tom</h3>
               <div class="flex gap-10">
                 <ul class="text-xl flex flex-col gap-4">
@@ -243,7 +243,7 @@
           </div>
           <div class="flex flex-col lg:flex-row justify-center items-center gap-8 py-10">
             <div class="flex flex-col w-full lg:w-3/12 h-[700px] p-3 rounded-[18px] bg-white text-dark">
-              <img src="/public/img/adopsi-anabell.jpg" class="w-full h-[326px] object-cover object-center overflow-hidden rounded-[8px]" alt="" />
+              <img src="public/img/adopsi-anabell.jpg" class="w-full h-[326px] object-cover object-center overflow-hidden rounded-[8px]" alt="" />
               <h3 class="font-bold text-[32px] py-4 text-pretty">Anabell</h3>
               <div class="flex gap-10">
                 <ul class="text-xl flex flex-col gap-4">
@@ -266,7 +266,7 @@
               >
             </div>
             <div class="flex flex-col w-full lg:w-3/12 h-[700px] p-3 rounded-[18px] bg-white text-dark invisible hidden lg:block">
-              <img src="/public/img/adopsi-leo.jpg" class="w-full h-[326px] object-cover object-center overflow-hidden rounded-[8px]" alt="" />
+              <img src="public/img/adopsi-leo.jpg" class="w-full h-[326px] object-cover object-center overflow-hidden rounded-[8px]" alt="" />
               <h3 class="font-bold text-[32px] py-4 text-pretty">Leo</h3>
               <div class="flex gap-10">
                 <ul class="text-xl flex flex-col gap-4">
@@ -289,7 +289,7 @@
               >
             </div>
             <div class="flex flex-col w-full lg:w-3/12 h-[700px] p-3 rounded-[18px] bg-white text-dark invisible hidden lg:block">
-              <img src="/public/img/adopsi-mimi.jpg" class="w-full h-[326px] object-cover object-center overflow-hidden rounded-[8px]" alt="" />
+              <img src="public/img/adopsi-mimi.jpg" class="w-full h-[326px] object-cover object-center overflow-hidden rounded-[8px]" alt="" />
               <h3 class="font-bold text-[32px] py-4 text-pretty">Momo</h3>
               <div class="flex gap-10">
                 <ul class="text-xl flex flex-col gap-4">
@@ -312,7 +312,7 @@
               >
             </div>
             <div class="flex flex-col w-full lg:w-3/12 h-[700px] p-3 rounded-[18px] bg-white text-dark invisible hidden lg:block">
-              <img src="/public/img/adopsi-tom.jpg" class="w-full h-[326px] object-cover object-center overflow-hidden rounded-[8px]" alt="" />
+              <img src="public/img/adopsi-tom.jpg" class="w-full h-[326px] object-cover object-center overflow-hidden rounded-[8px]" alt="" />
               <h3 class="font-bold text-[32px] py-4 text-pretty">Tom</h3>
               <div class="flex gap-10">
                 <ul class="text-xl flex flex-col gap-4">
@@ -390,14 +390,14 @@
                 😃
               </p>
             </div>
-            <div class="w-full h-full flex-1"><img src="/public/img/Image(5).png" class="object-cover object-center h-full w-full" alt="" /></div>
+            <div class="w-full h-full flex-1"><img src="public/img/Image(5).png" class="object-cover object-center h-full w-full" alt="" /></div>
           </div>
         </div>
       </section>
       <footer>
-        <div class="flex flex-col bg-dark p-10 bg-[url('/public/img/paw-pattern-dark.png')]">
+        <div class="flex flex-col bg-dark p-10 bg-[url('public/img/paw-pattern-dark.png')]">
           <div class="flex flex-col lg:flex-row gap-20 py-16">
-            <img src="/public/img/logo-light.svg" class="w-[300px] h-[120px] scale-95 md:scale-100" alt="" />
+            <img src="public/img/logo-light.svg" class="w-[300px] h-[120px] scale-95 md:scale-100" alt="" />
             <ul class="text-white flex flex-col gap-3 w-full md:w-56">
               <li class="text-Fuschia font-bold">Main Links</li>
               <a href="index.html">
@@ -429,13 +429,13 @@
               <p class="text-Fuschia font-bold">Follow us for updates</p>
               <div class="flex flex-row gap-4">
                 <a href="#">
-                  <img src="/public/img/Icon-YT.svg" class="hover:brightness-75 hover:duration-300 duration-300" alt="" />
+                  <img src="public/img/Icon-YT.svg" class="hover:brightness-75 hover:duration-300 duration-300" alt="" />
                 </a>
                 <a href="#">
-                  <img src="/public/img/Icon-TT.svg" class="hover:brightness-75 hover:duration-300 duration-300" alt="" />
+                  <img src="public/img/Icon-TT.svg" class="hover:brightness-75 hover:duration-300 duration-300" alt="" />
                 </a>
                 <a href="#">
-                  <img src="/public/img/Icon-IG.svg" class="hover:brightness-75 hover:duration-300 duration-300" alt="" />
+                  <img src="public/img/Icon-IG.svg" class="hover:brightness-75 hover:duration-300 duration-300" alt="" />
                 </a>
               </div>
             </div>
