--- a/src/index.html
+++ b/src/index.html
@@ -30,19 +30,19 @@
       <!-- Modal Container -->
       <div class="flex items-center justify-center fixed h-screen bottom-[-20%] w-full">
         <!-- Modal -->
-        <div class="bg-white bg-[url('/public/img/paw-pattern-light.png')] rounded-t-[32px] shadow-lg p-8 m-4 w-full h-full text-center">
+        <div class="bg-white bg-[url('public/img/paw-pattern-light.png')] rounded-t-[32px] shadow-lg p-8 m-4 w-full h-full text-center">
           <ul class="flex flex-col items-center gap-8 z-10 text-sky-900 font-semibold visible md:invisible">
             <li>
-              <a href="/src/tentang.html">Tentang Kami</a>
+              <a href="tentang.html">Tentang Kami</a>
             </li>
             <li>
-              <a href="/src/klinik.html">Klinik</a>
+              <a href="klinik.html">Klinik</a>
             </li>
             <li>
-              <a href="/src/grooming.html">Daycare & Grooming</a>
+              <a href="grooming.html">Daycare & Grooming</a>
             </li>
             <li>
-              <a href="/src/adopsi.html">Adopsi</a>
+              <a href="adopsi.html">Adopsi</a>
             </li>
             <li>
               <a href="https://api.whatsapp.com/send/?phone=0812345678910&text&type=phone_number&app_absent=0"><i class="bi bi-whatsapp px-2 text-green"></i>0812-3456-78910</a>
@@ -54,7 +54,7 @@
 
     <!-- /////////// -->
 
-    <nav class="flex flex-grow mx-auto scale-95 bg-[url('/public/img/paw-pattern-light.png')] bg-white flex-row justify-between my-5 pe-10 md:px-10 py-4 rounded-full overflow-hidden top-0 fixed w-full z-50 drop-shadow-[0_6px_18px_rgba(0,0,0,5%)]">
+    <nav class="flex flex-grow mx-auto scale-95 bg-[url('public/img/paw-pattern-light.png')] bg-white flex-row justify-between my-5 pe-10 md:px-10 py-4 rounded-full overflow-hidden top-0 fixed w-full z-50 drop-shadow-[0_6px_18px_rgba(0,0,0,5%)]">
       <a href="index.html" class="z-10 flex justify-center items-center">
         <svg width="155" class="scale-75 md:scale-100" height="58" viewBox="0 0 155 58" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path
@@ -100,16 +100,16 @@
       <ul class="flex flex-row items-center gap-8 z-10 text-sky-900 font-semibold">
         <ul class="flex flex-row items-center gap-8 z-10 text-sky-900 font-semibold max-md:hidden">
           <li>
-            <a href="/src/tentang.html">Tentang Kami</a>
+            <a href="tentang.html">Tentang Kami</a>
           </li>
           <li>
-            <a href="/src/klinik.html">Klinik</a>
+            <a href="klinik.html">Klinik</a>
           </li>
           <li>
-            <a href="/src/grooming.html">Daycare & Grooming</a>
+            <a href="grooming.html">Daycare & Grooming</a>
           </li>
           <li>
-            <a href="/src/adopsi.html">Adopsi</a>
+            <a href="adopsi.html">Adopsi</a>
           </li>
         </ul>
 
@@ -147,12 +147,12 @@
             Di Joy Cat, kami berkomitmen untuk memberikan perawatan terbaik bagi kucing kesayangan Anda. Kami menawarkan berbagai layanan yang dirancang khusus untuk memastikan kesehatan dan kebahagiaan kucing Anda. Dari klinik kucing hingga daycare dan grooming, serta program adopsi, Joy Cat adalah
             pilihan tepat bagi para pemilik kucing yang peduli.
           </p>
-          <img src="/public/img/CatPaw.svg" alt="" class="size-32 md:size-52" />
+          <img src="public/img/CatPaw.svg" alt="" class="size-32 md:size-52" />
         </div>
         <div id="right" class="flex-1 flex relative justify-center scale-50 md:scale-50 lg:scale-75 xl:scale-100">
-          <img src="/public/img/hero-home-3.jpg" class="object-cover absolute size-[200px] rounded-full border-green border-[10px] z-20 right-[65%] top-[5%]" alt="" />
-          <img src="/public/img/hero-home-2.jpg" class="object-cover absolute z-10 transform scale-x-[-1] w-[240px] h-[360px] rounded-[200px] border-[10px] border-Fuschia left-[65%] bottom-[-10%]" alt="" />
-          <img src="/public/img/hero-home-1.jpg" class="object-cover rounded-t-full z-0 h-[750px] w-[543px] border-[10px] border-white" alt="" />
+          <img src="public/img/hero-home-3.jpg" class="object-cover absolute size-[200px] rounded-full border-green border-[10px] z-20 right-[65%] top-[5%]" alt="" />
+          <img src="public/img/hero-home-2.jpg" class="object-cover absolute z-10 transform scale-x-[-1] w-[240px] h-[360px] rounded-[200px] border-[10px] border-Fuschia left-[65%] bottom-[-10%]" alt="" />
+          <img src="public/img/hero-home-1.jpg" class="object-cover rounded-t-full z-0 h-[750px] w-[543px] border-[10px] border-white" alt="" />
         </div>
       </div>
     </section>
@@ -161,19 +161,19 @@
         <h2 class="text-dark font-black text-[40px] md:text-[64px] text-wrap">Our Services</h2>
         <div class="flex flex-col lg:flex-row justify-center items-center gap-8 scale-95 py-10">
           <div class="flex flex-col w-11/12 lg:w-4/12 h-[700px] p-4 rounded-[18px] bg-white text-dark">
-            <img src="/public/img/service-klinik.jpeg" class="w-full h-[326px] object-cover object-center overflow-hidden rounded-[8px]" alt="" />
+            <img src="public/img/service-klinik.jpeg" class="w-full h-[326px] object-cover object-center overflow-hidden rounded-[8px]" alt="" />
             <h3 class="font-semibold text-[32px] py-4 text-pretty">Klinik Kucing</h3>
             <p class="font-normal text-xl text-pretty">Tim dokter hewan kami yang berpengalaman siap memberikan perawatan medis terbaik untuk kucing Anda. Kami menyediakan layanan vaksinasi, pemeriksaan rutin, pengobatan penyakit, dan konsultasi kesehatan.</p>
             <a href="klinik.html" class="bg-green hover:bg-lime-700 hover:transition hover:duration-300 duration-300 text-white text-2xl font-semibold p-6 rounded-full justify-center flex mt-[68px]">Cek Dokter</a>
           </div>
           <div class="flex flex-col w-11/12 lg:w-4/12 h-[700px] p-4 rounded-[18px] bg-white text-dark">
-            <img src="/public/img/service-daycare.webp" class="w-full h-[326px] object-cover object-center overflow-hidden rounded-[8px]" alt="" />
+            <img src="public/img/service-daycare.webp" class="w-full h-[326px] object-cover object-center overflow-hidden rounded-[8px]" alt="" />
             <h3 class="font-semibold text-[32px] py-4 text-pretty">Daycare & Grooming</h3>
             <p class="font-normal text-xl text-pretty">Butuh tempat yang aman dan nyaman untuk menitipkan kucing Anda saat Anda sibuk? Daycare kami adalah solusinya. Selain itu, layanan grooming kami akan membuat kucing Anda tetap bersih dan cantik.</p>
             <a href="grooming.html" class="bg-green hover:bg-lime-700 hover:transition hover:duration-300 duration-300 text-white text-2xl font-semibold p-6 rounded-full justify-center flex mt-[68px]">Lihat Paket</a>
           </div>
           <div class="flex flex-col w-11/12 lg:w-4/12 h-[700px] p-4 rounded-[18px] bg-white text-dark">
-            <img src="/public/img/service-adopsi.jpeg" class="w-full h-[326px] object-cover object-center overflow-hidden rounded-[8px]" alt="" />
+            <img src="public/img/service-adopsi.jpeg" class="w-full h-[326px] object-cover object-center overflow-hidden rounded-[8px]" alt="" />
             <h3 class="font-semibold text-[32px] py-4 text-pretty">Adopsi Kucing</h3>
             <p class="font-normal text-xl text-pretty">Bantu kami menemukan rumah baru yang penuh cinta untuk kucing-kucing yang membutuhkan. Lihat kucing-kucing yang siap diadopsi dan jadilah bagian dari cerita bahagia mereka.</p>
             <a href="adopsi.html" class="bg-green hover:bg-lime-700 hover:transition hover:duration-300 duration-300 text-white text-2xl font-semibold p-6 rounded-full justify-center flex mt-[97px]">Cari Kucing</a>
@@ -182,7 +182,7 @@
       </div>
     </section>
     <section>
-      <div class="bg-[url('/public/img/big-cat-img.jpg')] bg-cover bg-center py-40">
+      <div class="bg-[url('public/img/big-cat-img.jpg')] bg-cover bg-center py-40">
         <div class="flex flex-col lg:flex-row lg:container w-full gap-5 px-10 lg:ps-10 justify-start text-dark lg:pe-96">
           <div class="flex flex-col bg-white pt-5 pb-7 w-full items-start gap-5 rounded-[18px] px-10">
             <h4 class="text-[30px] font-semibold">Opening Hours</h4>
@@ -230,21 +230,21 @@
       <div class="text-dark bg-greenish flex flex-col xl:flex-row gap-10 p-10 py-20">
         <h1 class="text-[40px] md:text-[64px] font-black">Testimonials</h1>
         <div class="bg-white flex flex-col p-10 gap-5 text-[18px] h-fit w-full xl:w-3/12 rounded-[18px]">
-          <img src="/public/img/quote.svg" class="size-10" alt="" />
+          <img src="public/img/quote.svg" class="size-10" alt="" />
           <p>It was my second time there. I believe my cat, Dusty had a good time there. Had a major timming and royal splash spa. The fur is still smooth after 2 weeks. They took great care of Dusty knowing that she is pregnant. Recommended!</p>
           <ul class="list-disc px-5 font-bold">
             <li>Amelia Rose</li>
           </ul>
         </div>
         <div class="bg-white flex flex-col p-10 gap-5 text-[18px] h-fit w-full xl:w-3/12 rounded-[18px]">
-          <img src="/public/img/quote.svg" class="size-10" alt="" />
+          <img src="public/img/quote.svg" class="size-10" alt="" />
           <p>Clean and nice for the cats. Grooming package is good too. We chose a special package for our cat🐱, Molly. Today we sent 6 cats for boarding. Love JoyCat service!</p>
           <ul class="list-disc px-5 font-bold">
             <li>Niki Jasmine</li>
           </ul>
         </div>
         <div class="bg-white flex flex-col p-10 gap-5 text-[18px] h-fit w-full xl:w-3/12 rounded-[18px]">
-          <img src="/public/img/quote.svg" class="size-10" alt="" />
+          <img src="public/img/quote.svg" class="size-10" alt="" />
           <p>Sent Casper for grooming and chose to try aromatic salt bath. She enjoyed the session and seems calmer and approachable compared to before 😍. The place is well kept and adhere to Covid 19 SOP. Really recommended!</p>
           <ul class="list-disc px-5 font-bold">
             <li>Hanna Isma</li>
@@ -253,9 +253,9 @@
       </div>
     </section>
     <footer>
-      <div class="flex flex-col bg-dark p-10 bg-[url('/public/img/paw-pattern-dark.png')]">
+      <div class="flex flex-col bg-dark p-10 bg-[url('public/img/paw-pattern-dark.png')]">
         <div class="flex flex-col lg:flex-row gap-20 py-16">
-          <img src="/public/img/logo-light.svg" class="w-[300px] h-[120px] scale-95 md:scale-100" alt="" />
+          <img src="public/img/logo-light.svg" class="w-[300px] h-[120px] scale-95 md:scale-100" alt="" />
           <ul class="text-white flex flex-col gap-3 w-full md:w-56">
             <li class="text-Fuschia font-bold">Main Links</li>
             <a href="index.html">
@@ -287,13 +287,13 @@
             <p class="text-Fuschia font-bold">Follow us for updates</p>
             <div class="flex flex-row gap-4">
               <a href="#">
-                <img src="/public/img/Icon-YT.svg" class="hover:brightness-75 hover:duration-300 duration-300" alt="" />
+                <img src="public/img/Icon-YT.svg" class="hover:brightness-75 hover:duration-300 duration-300" alt="" />
               </a>
               <a href="#">
-                <img src="/public/img/Icon-TT.svg" class="hover:brightness-75 hover:duration-300 duration-300" alt="" />
+                <img src="public/img/Icon-TT.svg" class="hover:brightness-75 hover:duration-300 duration-300" alt="" />
               </a>
               <a href="#">
-                <img src="/public/img/Icon-IG.svg" class="hover:brightness-75 hover:duration-300 duration-300" alt="" />
+                <img src="public/img/Icon-IG.svg" class="hover:brightness-75 hover:duration-300 duration-300" alt="" />
               </a>
             </div>
           </div>
