--- a/src/tentang.html
+++ b/src/tentang.html
@@ -28,19 +28,19 @@
       <!-- Modal Container -->
       <div class="flex items-center justify-center fixed h-screen bottom-[-20%] w-full">
         <!-- Modal -->
-        <div class="bg-white bg-[url('/public/img/paw-pattern-light.png')] rounded-t-[32px] shadow-lg p-8 m-4 w-full h-full text-center">
+        <div class="bg-white bg-[url('public/img/paw-pattern-light.png')] rounded-t-[32px] shadow-lg p-8 m-4 w-full h-full text-center">
           <ul class="flex flex-col items-center gap-8 z-10 text-sky-900 font-semibold visible md:invisible">
             <li>
-              <a href="/src/tentang.html">Tentang Kami</a>
+              <a href="tentang.html">Tentang Kami</a>
             </li>
             <li>
-              <a href="/src/klinik.html">Klinik</a>
+              <a href="klinik.html">Klinik</a>
             </li>
             <li>
-              <a href="/src/grooming.html">Daycare & Grooming</a>
+              <a href="grooming.html">Daycare & Grooming</a>
             </li>
             <li>
-              <a href="/src/adopsi.html">Adopsi</a>
+              <a href="adopsi.html">Adopsi</a>
             </li>
             <li>
               <a href="https://api.whatsapp.com/send/?phone=0812345678910&text&type=phone_number&app_absent=0"><i class="bi bi-whatsapp px-2 text-green"></i>0812-3456-78910</a>
@@ -52,7 +52,7 @@
 
     <!-- /////////// -->
 
-    <nav class="flex flex-grow mx-auto scale-95 bg-[url('/public/img/paw-pattern-light.png')] bg-white flex-row justify-between my-5 pe-10 md:px-10 py-4 rounded-full overflow-hidden top-0 fixed w-full z-50 drop-shadow-[0_6px_18px_rgba(0,0,0,5%)]">
+    <nav class="flex flex-grow mx-auto scale-95 bg-[url('public/img/paw-pattern-light.png')] bg-white flex-row justify-between my-5 pe-10 md:px-10 py-4 rounded-full overflow-hidden top-0 fixed w-full z-50 drop-shadow-[0_6px_18px_rgba(0,0,0,5%)]">
       <a href="index.html" class="z-10 flex justify-center items-center">
         <svg width="155" class="scale-75 md:scale-100" height="58" viewBox="0 0 155 58" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path
@@ -98,17 +98,17 @@
       <ul class="flex flex-row items-center gap-8 z-10 text-sky-900 font-semibold">
         <ul class="flex flex-row items-center gap-8 z-10 text-sky-900 font-semibold max-md:hidden">
           <li class="flex gap-2">
-            <img src="/public/img/pawYellow.svg" class="" alt="" />
-            <a href="/src/tentang.html">Tentang Kami</a>
+            <img src="public/img/pawYellow.svg" class="" alt="" />
+            <a href="tentang.html">Tentang Kami</a>
           </li>
           <li>
-            <a href="/src/klinik.html">Klinik</a>
+            <a href="klinik.html">Klinik</a>
           </li>
           <li>
-            <a href="/src/grooming.html">Daycare & Grooming</a>
+            <a href="grooming.html">Daycare & Grooming</a>
           </li>
           <li>
-            <a href="/src/adopsi.html">Adopsi</a>
+            <a href="adopsi.html">Adopsi</a>
           </li>
         </ul>
 
@@ -131,7 +131,7 @@
         </div> -->
       </ul>
     </nav>
-    <section id="big-cat-pic" class="bg-[url('/public/img/hero-tentang-kami.jpg')] bg-cover bg-center w-full h-[300px] md:h-[600px]"></section>
+    <section id="big-cat-pic" class="bg-[url('public/img/hero-tentang-kami.jpg')] bg-cover bg-center w-full h-[300px] md:h-[600px]"></section>
     <main>
       <section class="ttg bg-light text-dark text-[64px] py-32">
         <div class="flex flex-col lg:flex-row gap-10 justify-center container px-10 lg:px-20 mx-auto">
@@ -140,7 +140,7 @@
               Tentang <br />
               Kami
             </h1>
-            <img src="/public/img/CatPaw(1).svg" class="size-52" alt="" />
+            <img src="public/img/CatPaw(1).svg" class="size-52" alt="" />
           </div>
           <div class="flex-1">
             <p class="text-lg lg:text-xl text-black">
@@ -152,7 +152,7 @@
         <div class="container flex flex-col px-10 lg:px-20 mx-auto pt-32">
           <h2 class="font-bold text-[40px]">The Cat Doctors</h2>
           <div class="flex flex-col lg:flex-row mt-32 gap-8 items-center justify-center">
-            <img src="/public/img/dokter-bima-sakti.jpeg" class="flex-1 w-full h-[450px] rounded-2xl object-cover object-center" alt="" />
+            <img src="public/img/dokter-bima-sakti.jpeg" class="flex-1 w-full h-[450px] rounded-2xl object-cover object-center" alt="" />
             <p class="flex flex-1 text-xl text-black">
               Dokter Bima Sakti Gemilang memperoleh gelar dokter hewan dari Michigan State University. Di Joy Cat, ia saat ini bekerja sebagai salah satu dari dua dokter hewan fulltime. Dia sangat bersemangat dalam memberikan perawatan pencegahan yang tepat kepada semua pasien, dan giat memberikan
               edukasi terkait kesehatan kucing kepada para pemilik kucing. Dr. Bintang juga sangat mahir dan unggul dalam operasi jaringan lunak.
@@ -160,7 +160,7 @@
           </div>
           <div class="flex flex-col-reverse lg:flex-row mt-32 gap-8 items-center justify-center">
             <p class="flex flex-1 text-xl text-black">Dokter Andromeda Gemilang, adik dari dr. Bima adalah Praktisi Tingkat Lanjut dalam Kedokteran Kucing dan memegang Keanggotaan Kolese Ilmuwan Hewan Indonesia untuk Kedokteran Kucing.</p>
-            <img src="/public/img/dokter-andromeda.jpeg" class="flex-1 w-full h-[450px] rounded-2xl object-cover object-center" alt="" />
+            <img src="public/img/dokter-andromeda.jpeg" class="flex-1 w-full h-[450px] rounded-2xl object-cover object-center" alt="" />
           </div>
         </div>
       </section>
@@ -170,22 +170,22 @@
             <h2 class="font-bold text-[40px]">Tim Kami</h2>
             <div class="flex flex-col lg:flex-row justify-between gap-20 lg:gap-0">
               <div class="flex flex-col">
-                <img src="/public/img/icon-staff.png" class="rounded-2xl" alt="" />
+                <img src="public/img/icon-staff.png" class="rounded-2xl" alt="" />
                 <p class="pt-5 text-xl">Practice Manager</p>
                 <h2 class="font-bold text-[32px]">Ananta Shabrina</h2>
               </div>
               <div class="flex flex-col">
-                <img src="/public/img/icon-staff.png" class="rounded-2xl" alt="" />
+                <img src="public/img/icon-staff.png" class="rounded-2xl" alt="" />
                 <p class="pt-5 text-xl">Head Nurse</p>
                 <h2 class="font-bold text-[32px]">Renata Lubis</h2>
               </div>
               <div class="flex flex-col">
-                <img src="/public/img/icon-staff.png" class="rounded-2xl" alt="" />
+                <img src="public/img/icon-staff.png" class="rounded-2xl" alt="" />
                 <p class="pt-5 text-xl">House of Cats Manager</p>
                 <h2 class="font-bold text-[32px]">Ilham Dwimawan</h2>
               </div>
               <div class="flex flex-col">
-                <img src="/public/img/icon-staff.png" class="rounded-2xl" alt="" />
+                <img src="public/img/icon-staff.png" class="rounded-2xl" alt="" />
                 <p class="pt-5 text-xl">Receptionist</p>
                 <h2 class="font-bold text-[32px]">Karin Aisyah</h2>
               </div>
@@ -194,9 +194,9 @@
         </div>
       </section>
       <footer>
-        <div class="flex flex-col bg-dark p-10 bg-[url('/public/img/paw-pattern-dark.png')]">
+        <div class="flex flex-col bg-dark p-10 bg-[url('public/img/paw-pattern-dark.png')]">
           <div class="flex flex-col lg:flex-row gap-20 py-16">
-            <img src="/public/img/logo-light.svg" class="w-[300px] h-[120px] scale-95 md:scale-100" alt="" />
+            <img src="public/img/logo-light.svg" class="w-[300px] h-[120px] scale-95 md:scale-100" alt="" />
             <ul class="text-white flex flex-col gap-3 w-full md:w-56">
               <li class="text-Fuschia font-bold">Main Links</li>
               <a href="index.html">
@@ -228,13 +228,13 @@
               <p class="text-Fuschia font-bold">Follow us for updates</p>
               <div class="flex flex-row gap-4">
                 <a href="#">
-                  <img src="/public/img/Icon-YT.svg" class="hover:brightness-75 hover:duration-300 duration-300" alt="" />
+                  <img src="public/img/Icon-YT.svg" class="hover:brightness-75 hover:duration-300 duration-300" alt="" />
                 </a>
                 <a href="#">
-                  <img src="/public/img/Icon-TT.svg" class="hover:brightness-75 hover:duration-300 duration-300" alt="" />
+                  <img src="public/img/Icon-TT.svg" class="hover:brightness-75 hover:duration-300 duration-300" alt="" />
                 </a>
                 <a href="#">
-                  <img src="/public/img/Icon-IG.svg" class="hover:brightness-75 hover:duration-300 duration-300" alt="" />
+                  <img src="public/img/Icon-IG.svg" class="hover:brightness-75 hover:duration-300 duration-300" alt="" />
                 </a>
               </div>
             </div>
